--- a/c_sharp_calculator/Calculator.Tests/Calculator.Tests.csproj
+++ b/c_sharp_calculator/Calculator.Tests/Calculator.Tests.csproj
@@ -17,4 +17,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Calculator\Calculator.csproj" />
+  </ItemGroup>
+
 </Project>
